# WILP_f110th_RaceStack

./: README.md
install/: local_setup.sh  setup.sh
install/f1tenth_gym_ros/share/f1tenth_gym_ros/: package.ps1  package.sh  package.xml
log/: latest_build
src/f1tenth_race_stack/: README.md  package.xml  setup.cfg  setup.py
src/f1tenth_race_stack/Documents/: F1TENTH_Race_Stack_IEEE.docx  F1TENTH_Race_Stack_Prompt.docx
src/f1tenth_race_stack/config/: deadman_switch_params.yaml  ftg_params.yaml  mppi_params.yaml  pure_pursuit_params.yaml  slam_params.yaml  vehicle_params.yaml  vesc_bridge_params.yaml
src/f1tenth_race_stack/f1tenth_race_stack/controller/: mppi_controller.py  mppi_debug.py  mppi_test_corner.py  pure_pursuit.py
src/f1tenth_race_stack/f1tenth_race_stack/mapping/: follow_the_gap.py
src/f1tenth_race_stack/f1tenth_race_stack/racing_line/: racing_line_generator.py  racing_line_publisher.py
src/f1tenth_race_stack/f1tenth_race_stack/state_machine/: race_state_machine.py
src/f1tenth_race_stack/f1tenth_race_stack/utils/: deadman_switch.py  lap_counter.py  system_id_driver.py  vesc_bridge.py  visualizer.py
src/f1tenth_race_stack/launch/: head_to_head.launch.py  mapping_autonomous.launch.py  mapping_joystick.launch.py  racing.launch.py  sim_head_to_head.launch.py  sim_mapping.launch.py  sim_time_trial.launch.py  system_id.launch.py  time_trial.launch.py
src/f1tenth_race_stack/maps/: levine_racing_line.csv  levine_track.yaml
src/f1tenth_race_stack/rviz/: mapping.rviz
src/f1tenth_race_stack/scripts/: create_track_map.py  generate_levine_centerline.py  generate_perfect_centerline.py
(+40 files in other folders)
