<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_race_stack</name>
  <version>1.0.0</version>
  <description>
    A production-quality F1TENTH autonomous racing stack for ROS 2 Humble.
    Inspired by the ForzaETH race_stack architecture, this package provides
    MPPI-based racing control, Follow-The-Gap autonomous mapping, and a
    full race state machine for the Traxxas Slash 4x4 platform with Intel NUC.
  </description>
  <maintainer email="racer@f1tenth.org">F1TENTH Racer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS 2 Python client library -->
  <depend>rclpy</depend>

  <!-- Message / Interface packages -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- TF2 -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- SLAM -->
  <depend>slam_toolbox</depend>

  <!-- Joystick / Teleop -->
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>

  <!-- Dynamic parameter callbacks -->
  <depend>rcl_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
